--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@phosphor-icons/react": "^2.0.13",
     "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^4.35.7",
     "@tanstack/react-query-devtools": "^4.35.7",
+    "@types/react-modal": "^3.16.3",
     "@types/react-toastify": "^4.1.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.2.10",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
